# Master

./: .gitignore
plastic-id-ml/: .gitignore  EDA.py  README.md  a.py  clean_csv.py  histograms.py  pca_plot.py  pplott.py  pyproject.toml
plastic-id-ml/artifacts/: et_report.json  rf.joblib  rf_report.json  svm.joblib  svm_bal.joblib  svm_bal_report.json  svm_norm.joblib  svm_norm_report.json  svm_pca2.joblib  svm_pca2_report.json  svm_pca4.joblib  svm_pca4_report.json  svm_pca8.joblib  svm_pca8_bal.joblib  svm_pca8_bal_report.json  svm_pca8_report.json  svm_raw.joblib  svm_raw_report.json  svm_report.json  svm_snv.joblib  svm_snv_report.json  xgb.joblib  xgb_report.json
plastic-id-ml/artifacts/20250425T110320_et/: per_class_metrics.csv
plastic-id-ml/artifacts/20250425T112645_et/: metrics.json  per_class_metrics.csv
plastic-id-ml/artifacts/20250425T131346_rf/: metrics.json  model.joblib  per_class_metrics.csv
plastic-id-ml/artifacts/20250425T172226_cnn/: metrics.json  model.joblib  per_class_metrics.csv
plastic-id-ml/artifacts/20250425T172934_cnn/: metrics.json  model.joblib  per_class_metrics.csv
plastic-id-ml/artifacts/20250426T123713_et_norm/: metrics.json  model.joblib  per_class_metrics.csv
plastic-id-ml/artifacts/20250426T123746_et_norm/: metrics.json  model.joblib  per_class_metrics.csv
plastic-id-ml/artifacts/20250426T124549_cnn_snv/: metrics.json  model.joblib  per_class_metrics.csv
plastic-id-ml/artifacts/20250426T124619_cnn/: metrics.json  model.joblib  per_class_metrics.csv
plastic-id-ml/artifacts/20250426T124656_mlp/: metrics.json  model.joblib  per_class_metrics.csv
plastic-id-ml/artifacts/20250426T124727_mlp_norm/: metrics.json  model.joblib  per_class_metrics.csv
plastic-id-ml/artifacts/20250426T124802_mlp_snv/: metrics.json  model.joblib  per_class_metrics.csv
plastic-id-ml/data/: datasetcombiner.py
plastic-id-ml/notebooks/: 01_data_overview.ipynb  02_preprocessing_checks.ipynb
plastic-id-ml/tests/: test_noise.py  test_registry.py
plastic-id-ml/thesis_tools/: bracecheck.py  gain_plot.py  histogram_by_class.py  histograms.py  make_histograms.py  pca_plot.py  plot_model_score.py  pplott.py
(+526 files in other folders)
