[tool.poetry]
name        = "plastic-id-ml"
version     = "0.1.0"
description = "ML pipeline for plastic identification thesis"
authors     = ["Anders Blomberg <s339872@oslomet.no>"]

# point Poetry at our src/ layout
packages = [
  { include = "plastic_id", from = "src" },
]

[tool.poetry.dependencies]
python      = "^3.9"
pandas      = "^2.2"
scikit-learn= "^1.5"
hydra-core  = "^1.3"
typer       = "^0.12"
rich        = "^13.7"

# optional ML frameworks
xgboost = { version = "~2.0", optional = true }
torch   = { version = "^2.3.1", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"

[tool.poetry.scripts]
pid = "plastic_id.cli:app"

[tool.poetry.extras]
optional = ["xgboost", "torch"]
